[gd_scene load_steps=24 format=2]

[ext_resource path="res://Tilemap/World.gd" type="Script" id=1]
[ext_resource path="res://Tilemap/SpriteScene/arbre1of.tscn" type="PackedScene" id=2]
[ext_resource path="res://Tilemap/SpriteScene/arbre1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Tilemap/SpriteScene/autonne2.tscn" type="PackedScene" id=4]
[ext_resource path="res://Tilemap/SpriteScene/autumTree.tscn" type="PackedScene" id=5]
[ext_resource path="res://Tilemap/SpriteScene/buisson2.tscn" type="PackedScene" id=6]
[ext_resource path="res://Tilemap/SpriteScene/buisson3.tscn" type="PackedScene" id=7]
[ext_resource path="res://Tilemap/SpriteScene/buisson.tscn" type="PackedScene" id=8]
[ext_resource path="res://Tilemap/SpriteScene/groche_3.tscn" type="PackedScene" id=9]
[ext_resource path="res://Tilemap/SpriteScene/groche_4.tscn" type="PackedScene" id=10]
[ext_resource path="res://Tilemap/SpriteScene/groche_5.tscn" type="PackedScene" id=11]
[ext_resource path="res://Tilemap/SpriteScene/groche_7.tscn" type="PackedScene" id=12]
[ext_resource path="res://Tilemap/SpriteScene/groche_8.tscn" type="PackedScene" id=13]
[ext_resource path="res://Tilemap/SpriteScene/house1.tscn" type="PackedScene" id=14]
[ext_resource path="res://Tilemap/SpriteScene/house2.tscn" type="PackedScene" id=15]
[ext_resource path="res://Tilemap/SpriteScene/house.tscn" type="PackedScene" id=16]
[ext_resource path="res://Tilemap/SpriteScene/nippon.tscn" type="PackedScene" id=17]
[ext_resource path="res://Tilemap/SpriteScene/souche_9.tscn" type="PackedScene" id=18]
[ext_resource path="res://Tilemap/SpriteScene/tree-tileset.tscn" type="PackedScene" id=19]
[ext_resource path="res://Tilemap/SpriteScene/treeSet2.tscn" type="PackedScene" id=20]
[ext_resource path="res://Tilemap/SpriteScene/treeSet3.tscn" type="PackedScene" id=21]
[ext_resource path="res://Tilemap/SpriteScene/Tree2.tscn" type="PackedScene" id=22]
[ext_resource path="res://Tilemap/SpriteScene/Yo.tscn" type="PackedScene" id=23]

[node name="WorldMotif" type="Node" index="0"]

script = ExtResource( 1 )

[node name="arbre1of" parent="." index="0" instance=ExtResource( 2 )]

visible = false

[node name="autonne1" parent="." index="1" instance=ExtResource( 3 )]

visible = false

[node name="autonne2" parent="." index="2" instance=ExtResource( 4 )]

visible = false

[node name="autumTree" parent="." index="3" instance=ExtResource( 5 )]

visible = false

[node name="buisson2" parent="." index="4" instance=ExtResource( 6 )]

visible = false

[node name="buisson3" parent="." index="5" instance=ExtResource( 7 )]

visible = false

[node name="buisson" parent="." index="6" instance=ExtResource( 8 )]

visible = false

[node name="groche_3" parent="." index="7" instance=ExtResource( 9 )]

visible = false

[node name="groche_4" parent="." index="8" instance=ExtResource( 10 )]

visible = false

[node name="groche_5" parent="." index="9" instance=ExtResource( 11 )]

visible = false

[node name="groche_7" parent="." index="10" instance=ExtResource( 12 )]

visible = false

[node name="groche_8" parent="." index="11" instance=ExtResource( 13 )]

visible = false

[node name="house1" parent="." index="12" instance=ExtResource( 14 )]

visible = false

[node name="house2" parent="." index="13" instance=ExtResource( 15 )]

visible = false

[node name="house" parent="." index="14" instance=ExtResource( 16 )]

visible = false

[node name="nippon" parent="." index="15" instance=ExtResource( 17 )]

visible = false

[node name="souche_9" parent="." index="16" instance=ExtResource( 18 )]

visible = false

[node name="tree-tileset" parent="." index="17" instance=ExtResource( 19 )]

visible = false

[node name="treeSet2" parent="." index="18" instance=ExtResource( 20 )]

visible = false

[node name="treeSet3" parent="." index="19" instance=ExtResource( 21 )]

visible = false

[node name="Tree2" parent="." index="20" instance=ExtResource( 22 )]

visible = false

[node name="Yo" parent="." index="21" instance=ExtResource( 23 )]

visible = false


